@@ -427,8 +427,6 @@ public interface Property extends Attribute {
 
   /**
    * A property which value is derived from the values of one or more properties.
-   * For the property to be updated when the parent properties are you must
-   * link the properties together using the <code>addLinkedPropertyIDs()</code>method.
    */
   interface DerivedProperty extends TransientProperty {
 
